src/envoy/http/oidc/config/envoy.json
{
  "listeners": [
    {
      "address": "tcp://127.0.0.1:8443",
      "bind_to_port": true,
      "ssl_context": {
        "cert_chain_file": "tls/server.cert",
        "private_key_file": "tls/server.key"
      },
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": [
                    "tenant1.cluster.com:8443",
                    "tenant2.cluster.com:8443"
                  ],
                  "routes": [
                    {
                      "path": "/echo",
                      "cluster": "hello_world"
                    },
                    {
                      "prefix": "/",
                      "cluster": "spa"
                    }
                  ]
                }
              ]
            },
            "access_log": [
              {
                "path": "/dev/stdout"
              }
            ],
            "filters": [
              {
                "type": "decoder",
                "name": "xsrf",
                "config": {
                  "key": "4Fpdw3nMDZHZ7NFDjqRuQZE7NODlsWBdQj3iiccKzhU="
                }
              },
              {
                "type": "decoder",
                "name": "oidc",
                "config": {
                  "matches": {
                    "tenant1": {
                      "criteria": {
                        "header": ":authority",
                        "value": "tenant1.cluster.com:8443"
                      },
                      "idp": {
                        "jwt_config": {
                            "issuer": "https://accounts.google.com",
                            "jwks_uri": "https://www.googleapis.com/oauth2/v3/certs",
                            "jwks_uri_envoy_cluster": "oidc_cluster"
                        },
                        "authentication_endpoint": "https://accounts.google.com/o/oauth2/v2/auth",
                        "token_endpoint": {
                          "cluster": "oidc_cluster",
                          "host": "www.googleapis.com",
                          "path": "/oauth2/v4/token"
                        },
                        "client_id": "<tenant1-client-id>",
                        "client_secret": "<tenant2-client-secret>"
                      }
                    },
                    "tenant2": {
                      "criteria": {
                        "header": ":authority",
                        "value": "tenant2.cluster.com:8443"
                      },
                      "idp": {
                        "jwt_config": {
                          "issuer": "https://accounts.google.com",
                          "jwks_uri": "https://www.googleapis.com/oauth2/v3/certs",
                          "jwks_uri_envoy_cluster": "oidc_cluster"
                        },
                        "authentication_endpoint": "https://accounts.google.com/o/oauth2/v2/auth",
                        "token_endpoint": {
                          "cluster": "oidc_cluster",
                          "host": "www.googleapis.com",
                          "path": "/oauth2/v4/token"
                        },
                        "client_id": "<tenant2-client-id>",
                        "client_secret": "<tenant2-client-secret>"
                      }
                    }
                  },
                  "authentication_callback": "/oauth",
                  "landing_page": "/spa",
                  "session_manager_config": {
                    "key": "4Fpdw3nMDZHZ7NFDjqRuQZE7NODlsWBdQj3iiccKzhU="
                  }
                }
              },
              {
                "type": "decoder",
                "name": "jwt-auth",
                "config": {
                   "jwts": [
                     {
                        "issuer": "https://accounts.google.com",
                        "jwks_uri": "https://www.googleapis.com/oauth2/v3/certs",
                        "jwks_uri_envoy_cluster": "oidc_cluster"
                     }
                   ]
                }
              },
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/stdout",
    "address": "tcp://127.0.0.1:8081"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "spa",
        "connect_timeout_ms": 5000,
        "type": "static",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:4200"
          }
        ]
      },
      {
        "name": "hello_world",
        "connect_timeout_ms": 5000,
        "type": "static",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:8080"
          }
        ]
      },
      {
        "name": "oidc_cluster",
        "connect_timeout_ms": 10000,
        "type": "logical_dns",
        "lb_type": "random",
        "hosts": [
          {
            "url": "tcp://www.googleapis.com:443"
          }
        ],
        "ssl_context": {
        }
      }
    ]
  }
}
